--- a/less/header.less
+++ b/less/header.less
@@ -58,6 +58,8 @@
       .container;
 
       float: none;
+      padding: 0;
+      margin: 0 auto;
 
       > .leaf {
         > a,
